<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools" tools:context=".MainActivity">
    <item android:id="@+id/action_finish" android:title="@string/finish"
        android:orderInCategory="100" android:showAsAction="never" />
    <item android:id="@+id/action_pause" android:title="@string/pause"
        android:orderInCategory="100" android:showAsAction="never" />
    <item android:id="@+id/action_resume" android:title="@string/resume"
        android:orderInCategory="100" android:showAsAction="never" />
    <item android:id="@+id/action_restart" android:title="@string/restart"
        android:orderInCategory="100" android:showAsAction="never" />
    <item android:id="@+id/action_help" android:title="@string/help"
        android:orderInCategory="100" android:showAsAction="never" />
    <item android:id="@+id/action_norwegian" android:title="@string/norwegian"
        android:orderInCategory="100" android:showAsAction="never" />
    <item android:id="@+id/action_english" android:title="@string/english"
        android:orderInCategory="100" android:showAsAction="never" />
</menu>
